@@ -138,8 +138,11 @@ a:link		{ color: #000099;
 a:visited,
 a:hover		{ color: #409D27;
 		}
-.littlered	{ font-size: 10px; color:red; vertical-align:top;
-		}
+.littlered, .g-littlered {
+    font-size: 10px;
+    color:red;
+    vertical-align:top;
+}
 
 .g-tabset {
     width: 100%;
