@@ -1,3 +1,9 @@
+2006-09-08 Jens Tkotz <jens@peino.de> 1.5.5-svn-b7
+
+ * Change: Enhanced wording in config.
+
+ * Fix: Little CSS for for .g-littlered.
+
 2006-09-08 Jens Tkotz <jens@peino.de> 1.5.5-svn-b6
 
  * Fix: Added additional --keyword in xgettext calls to support gettext 0.15
